@@ -1,5 +1,5 @@
 //
-//  CodeBuilder.cs
+//  CodeBuilderBase.cs
 //
 //  Author:
 //       Willem Van Onsem <vanonsem.willem@gmail.com>
@@ -22,12 +22,12 @@ using System;
 
 namespace ZincOxide.Codegen {
 
-    public interface ICodeBuilder {
+    public class CodeBuilderBase : ICodeBuilder {
 
-        ICodePackage NewPackage (string name);
-
-        ICodeInterface NewInterface (ICodePackage package, string name, params ICodeInterface[] iface);
+        public CodeBuilderBase () {
+        }
 
     }
 
 }
+
